@@ -1,6 +1,7 @@
 blib
 Makefile
 Makefile.old
+MANIFEST.bak
 MYMETA.yml
 pm_to_blib
 *.tar.gz
