@@ -1,4 +1,4 @@
-@import url("modern.css");
+@import url("old.css");
 
 html {
 	background-color: #121212;
