@@ -1,1 +1,1 @@
-<a rel="{ $DIRECTION }" accesskey="{ $ACCESSKEY }" href="{ $URL }?width={ $WIDTH }" class="nav { $VIDEO }"><img src="{ $PICTURE }" alt="{ $DIRECTION } &ndash; { $FILENAME }"/></a>
+<a id="{ $DIRECTION }" rel="{ $DIRECTION }" accesskey="{ $ACCESSKEY }" href="{ $URL }?width={ $WIDTH }" class="nav { $VIDEO }"><img class="navimg" src="{ $PICTURE }" alt="{ $DIRECTION } &ndash; { $FILENAME }"/><span class="navtext">{ if ($DIRECTION eq 'next') { $OUT .= '→' } else { $OUT .= '←'; } }</span></a>
