@@ -3,19 +3,29 @@
 
 	<div id="directory">
 		<div id="picture">
-			Viewing picture (video) { $NUMBER } of { $TOTAL }<br/>
-			<video controls src="{ $SRC }">
+			<video rel="foaf:primaryTopicOf" controls src="{ $SRC }">
 				<p>Your browser doesn't support playing this video file directly. You could try <a href="{ $SRC }">downloading it</a>.</p>
 				<a href="{ $SRC }"><img src="{ $POSTER }" alt="Video thumbnail"></a>
 			</video>
-			Slideshow [ { $SLIDESHOW } ]
+			<div id="size-slideshow">
+				<span id="slideshow">⌚ <span>{ $SLIDESHOW }</span></span>
+			</div>
 		</div>
 
 		<div id="nav">
-			<span class="nav left" width="20%">{ $BACK }</span>
-			<span class="nav right" width="20%">{ $NEXT }</span>
-			<span class="info">{ $PICTUREINFO }</span>
+			<span class="nav left">{ $BACK }</span>
+			<span class="nav right">{ $NEXT }</span>
 		</div>
+
 		<div class="clear"></div>
+
+		<div class="info" about="{ $IMAGEURI }">
+			<div id="pictureinfo-map">
+				{ $PICTUREINFO }
+				<div>{ $MAP }</div>
+			</div>
+		</div>
 	</div>
 </div>
+
+{ $LICENSE }
