@@ -21,6 +21,7 @@ Not yet released
 	- Tidied up whitespace and odd bits of style
 	- Fixed some bugs
 	- OpenGraph metadata <http://ogp.me/>
+	- Default 'modern' stylesheet now fills the page with the image
 
 1.1 Sun Aug  5 23:48:30 BST 2012
 
